# django-newpaper-project

./: db.sqlite3  pyproject.toml  sample.env 
articles/: models.py  views.py
articles/migrations/: 0002_comment.py  0003_alter_comment_article.py
newspaper_project/: settings.py  urls.py
templates/: 403.html  article_list.html  base.html  home.html
templates/registration/: login.html  signup.html
